styles.css
:root {
    --main-font-size: 16px;
    --background-color: #1F2937;
    --quote-background-color: #E5E7EB;
    --accent-color: #3882F6;
    --main-text-color: #F9FAF8;
    --secondary-text-color: #E5E7EB;
    --alternate-text-color: #1F2937;
}

* {
    box-sizing: border-box;
}

html {
    height: 100%;
    font-size: var(--main-font-size);
    font-family: Roboto, system-ui;
}

body {
    margin: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

header, section, footer {
    max-width: 1020px;
    margin: 0 auto;
}

h1 {
    font-size: 3rem;
    font-weight: bolder;
    margin-top: 0;
    margin-bottom: 10px;
}

a, a:visited {
    text-decoration: none;
    color: var(--secondary-text-color);
}

figure, blockquote, figcaption {
    border: none;
    padding: 0;
    margin: 0;
}

p {
    margin-top: 0;
}

.page-width-wrap {
    background-color: var(--background-color);
    color: var(--main-text-color);
}

.page-width-wrap--white {
    background-color: #fff;
    color: var(--alternate-text-color);
}

.page-width-wrap--quote {
    background: var(--quote-background-color);
    color: var(--alternate-text-color);
}

.header {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    padding: 20px 0;
    justify-content: space-between;
}

.header__logo {
    font-size: 1.5rem;
}

.header__list {
    display: flex;
    justify-content: space-between;
    gap: 20px;

    list-style: none;
    margin: 0;
    padding: 0;
}

.header__link {
    font-size: 1.125rem;
}

.hero-section {
    min-height: 440px;
    display: flex;
    /*flex-wrap: wrap;*/
    justify-content: space-between;
    align-items: center;
    column-gap: 50px;
}

.hero-section__menu-wrapper {
    flex: 0 1 445px;
    min-width: 320px;
}

.hero-section__description {
    font-size: 1.125rem;
    color: var(--secondary-text-color);
}

.hero-section__image {
    flex: 0 0 520px;
    height: 240px;
    object-fit: cover;
}

.button {
    margin: 0;
    padding: 8px 16px;
    min-width: 130px;
    font-size: 1.125rem;
    font-weight: bold;
    border: none;
    border-radius: 8px;
    background-color: var(--accent-color);
    color: var(--main-text-color);
    cursor: pointer;
}

.button:hover, .button:active {
    background-color: #2b77ee;
}

.image-set-section {
    min-height: 500px;
    padding-top: 55px;
}

.image-set-section__header {
    margin-top: 0;
    margin-bottom: 55px;
    text-align: center;
    font-weight: bolder;
    font-size: 2.25rem;
}

.image-set {
    display: flex;
    flex-wrap: wrap;
    gap: 50px;
    justify-content: center;
}

.image-set__item {
    flex: 0 0 168px;
}

.image-set__image {
    width: 168px;
    height: 168px;
    margin-bottom: 12px;
    border: 4px solid var(--accent-color);
    border-radius: 16px;
    object-fit: cover;
}

.image-set__description {
    padding: 0 4px;
    text-align: center;
}

.quote-section {
    min-height: 430px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.quote {
    flex: 0 1 800px;
    padding: 0 20px;
}

.quote__block p {
    padding: 0;
    margin: 0 0 1rem 0;
    font-size: 2.25rem;
    font-style: italic;
    font-weight: lighter;
}

.quote__caption {
    text-align: right;
    font-weight: bold;
    font-size: 1.5rem;
}

